Trying to solve bug on scrollbars

--- a/src/_templates/arcelor_mittal/static/css/styles.css
+++ b/src/_templates/arcelor_mittal/static/css/styles.css
@@ -67,6 +67,7 @@
   --footer-height: 0px;
   --notebook-spacing: 0px;
   --notebook-height: calc(100vh - var(--footer-height) - var(--navbar-height) - var(--notebook-spacing));
+  --sidebar-height: 100vh;
 }
 
 *,
